# ECoHMM

./: .gitignore  Makefile  README.md  comd.c  comd.erl  comd_srv.erl  comd_sup.erl  echo_server.erl  echo_supervisor.erl  hmm.c  hmm.erl  hmm_srv.erl  hmm_sup.erl  pkill  redis_test.c  stopwatch.erl
CoMD-still-working/: LOsolve  LOsolve.c  README-AL  README.using_makefile  makefile.CHOICES  makefile.darwin  stressTensor.txt  test_Makefile
CoMD-still-working/data/: mishin_ch.txt
CoMD-still-working/src-flat/: Makefile  cmdLineParser.c  deformation.c  docompute.c  domains.c  mycommand.c  pmd.c  test_Makefile  timestep.c  utility.c
CoMD-still-working/src-ocl/: CMakeLists.txt  cl_utils.c  eam_kernels.c  helpers.c  pmdOCL.c  viz_kernels.c
CoMD-still-working/src-parallel/: CMakeLists.txt  docompute.c  domains.c  eam.c  geometry.c  ljForce.c  pmd.c  test_Makefile  timestep.c  yamlOutput.c
CoMD-still-working/src-parallel/include/: docompute.h  domains.h  eam.h  ic_fcc.h  parallel.h  pmd.h  pmdTypes.h  redistribute.h
CoMD-still-working/src-viz/: AtomVisualize.c  CMakeLists.txt  pmdViz.c
OldCoMD/: CMakeCache.txt  CMakeLists.txt  LOsolve  LOsolve.c  fastCoMD  makefile.conejo  makefile.osx  slowCoMD
OldCoMD/Swift/: About.txt
OldCoMD/src-flat/: CMakeLists.txt  cheby.c  docompute.c  eam.c  ic_fcc.c  ljForce.c  pmd.c  read.c  write.c  yamlOutput.c
OldCoMD/src-ocl/: Makefile  docompute.c  lj_kernels.c  quaternion.c  test_Makefile  timestep_kernels.c  yamlOutput.c
OldCoMD/src-parallel/: ic_fcc.c  mycommand.c  parallel.c  redistribute.c
OldCoMD/src-viz/: test_Makefile  (+1 more)
(+33 files in other folders)
